tests/NormalTests/paczka1/fuzzy1/20755600.err
Error in line 2: A229 A876 80,2
Error in line 17: 4gU A374 50,7
Error in line 29: A229 A374 gg,9
Error in line 31: fcEl A876 19,1
Error in line 30: A229 A374 254,3
